<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <TextView
        android:id="@+id/demoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#eeeeee" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBtnDTR"
        android:id="@+id/checkBoxDTR"
        android:enabled="true"
        android:checked="false" />


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBtnRTS"
        android:id="@+id/checkBoxRTS" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textBtnUpload"
        android:id="@+id/checkBoxUpload"
        android:checked="false" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dropdown"
        android:entries="@array/spinner_list" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textBtnAvrg"
        android:id="@+id/avrgButton" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_below="@+id/demoTitle"
        android:layout_height="1dip"
        android:background="#eeeeee" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/averageTextView"
        android:textSize="38sp"
        android:hint="ここに平均値が表示されます" />

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_below="@+id/demoTitle"
        android:layout_height="1dip"
        android:background="#eeeeee" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:divider="#FFFFFF"
        android:footerDividersEnabled="true"
        android:headerDividersEnabled="true"
        android:dividerHeight="1dp" />

</LinearLayout>
